[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6.0",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "mooarchives"
version = "0.0.1"
description = "Multi-Objective Archive Library with Python bindings"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.15.0"
]
keywords = ["multi-objective", "optimization", "pareto", "archive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.optional-dependencies]
test = ["pytest>=6.0", "numpy"]
dev = ["pytest>=6.0", "numpy", "build", "twine"]

[project.urls]
Homepage = "https://github.com/yourusername/mooarchives"
Repository = "https://github.com/yourusername/mooarchives.git"
Issues = "https://github.com/yourusername/mooarchives/issues"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "moa"}

[tool.setuptools.package-data]
mooarchives = ["*.so", "*.pyd"]